installed mongodb and added conneciton uri to .env file

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PORT=8000
+MONGO_DB_URI=mongodb+srv://carterormston:HszFEJOEUkTJUBTz@cluster0.7n5rc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
