--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=8000
 MONGO_DB_URI=mongodb+srv://carterormston:HszFEJOEUkTJUBTz@cluster0.7n5rc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=KlvRP/RrWoyFUc58Zo/xLYljSZ8S1Jj+8oqis6+qJcQ=
